--- a/frontend-manager/package.json
+++ b/frontend-manager/package.json
@@ -8,7 +8,7 @@
     "url": "https://github.com/fatpat/acropyx2.git"
   },
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3001",
     "build": "next build",
     "start": "next start",
     "export": "next export",
