[manager] parameterize backend informations + allow no auth to backend

--- a/frontend-manager/.env
+++ b/frontend-manager/.env
@@ -1,1 +1,4 @@
 AUTH0_BASE_URL=$VERCEL_URL
+BACKEND_API_URL='https://preprod-api-acropyx2.herokuapp.com/'
+BACKEND_API_USERNAME='admin'
+BACKEND_API_PASSWORD='PimeQcXLGGB'
