--- a/frontend-manager/.env.local
+++ b/frontend-manager/.env.local
@@ -3,3 +3,10 @@ AUTH0_BASE_URL='http://localhost:3001'
 AUTH0_ISSUER_BASE_URL='https://dev-stq2d6gb.us.auth0.com'
 AUTH0_CLIENT_ID='K58p7x7BpBzkHAENlFr3x2KhaFOEuxnY'
 AUTH0_CLIENT_SECRET='sCLa-ejUAiDorMLsaP5EMC8g5xkqrA_d2RvXzx4Lf4kxsAuQw-l7HmZ4lj-KGhI-'
+
+BACKEND_API_URL='http://back:8000/'
+BACKEND_API_USERNAME='admin'
+#BACKEND_API_PASSWORD='admin'
+#BACKEND_API_URL='https://preprod-api-acropyx2.herokuapp.com/'
+#BACKEND_API_USERNAME='admin'
+#BACKEND_API_PASSWORD='PimeQcXLGGB'
