[manager] disable auth for local dev

--- a/frontend-manager/.env.local
+++ b/frontend-manager/.env.local
@@ -6,7 +6,7 @@ AUTH0_CLIENT_SECRET='sCLa-ejUAiDorMLsaP5EMC8g5xkqrA_d2RvXzx4Lf4kxsAuQw-l7HmZ4lj-
 
 BACKEND_API_URL='http://back:8000/'
 BACKEND_API_USERNAME='admin'
-#BACKEND_API_PASSWORD='admin'
+BACKEND_API_PASSWORD=
 #BACKEND_API_URL='https://preprod-api-acropyx2.herokuapp.com/'
 #BACKEND_API_USERNAME='admin'
 #BACKEND_API_PASSWORD='PimeQcXLGGB'
