--- a/frontend-manager/package.json
+++ b/frontend-manager/package.json
@@ -33,6 +33,7 @@
     "mdi-material-ui": "^7.1.0",
     "moment": "^2.29.3",
     "next": "12.0.4",
+    "notistack": "^2.0.5",
     "nprogress": "^0.2.0",
     "react": "17.0.2",
     "react-apexcharts": "^1.3.9",
