--- a/frontend-manager/package.json
+++ b/frontend-manager/package.json
@@ -12,6 +12,7 @@
     "build": "next build",
     "start": "next start",
     "export": "next export",
+    "check": "eslint \"src/**/*.{js,jsx}\"",
     "lint": "eslint --fix \"src/**/*.{js,jsx}\"",
     "format": "prettier --write \"src/**/*.{js,jsx}\""
   },
