--- a/frontend-manager/.env
+++ b/frontend-manager/.env
@@ -1,4 +1,2 @@
-AUTH0_BASE_URL=$VERCEL_URL
-BACKEND_API_URL='https://preprod-api-acropyx2.herokuapp.com/'
-BACKEND_API_USERNAME='admin'
-BACKEND_API_PASSWORD='PimeQcXLGGB'
+NEXT_PUBLIC_API_URL='https://preprod-api-acropyx.herokuapp.com'
+NEXT_PUBLIC_APP_BASE_PATH=
