--- a/frontend-public/package.json
+++ b/frontend-public/package.json
@@ -27,6 +27,7 @@
     "@mui/x-data-grid": "^5.12.1",
     "@popperjs/core": "^2.11.2",
     "apexcharts-clevision": "3.28.5",
+    "axios": "^0.27.2",
     "babel-eslint": "^10.1.0",
     "clsx": "^1.1.1",
     "countries-code": "^1.1.0",
