--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     build: ./back
     environment: 
       - MONGODB_URL=mongodb://mongo:mongo@mongodb
+      - DATABASE=acropyx2-dev
     ports:
       - 8000:8000
     volumes:
