--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
 
   public:
     image: node:18-alpine
-    command: sh -c "npm install && npm run dev"
+    command: sh -c "yarn install && yarn run dev"
     working_dir: /app
     ports:
       - 3000:3000
@@ -29,7 +29,7 @@ services:
 
   manager:
     image: node:18-alpine
-    command: sh -c "npm install && npm run dev"
+    command: sh -c "yarn install && yarn run dev"
     working_dir: /app
     ports:
       - 3001:3001
