--- a/frontend-public/package.json
+++ b/frontend-public/package.json
@@ -17,6 +17,7 @@
     "format": "prettier --write \"src/**/*.{js,jsx}\""
   },
   "dependencies": {
+    "@babel/core": "^7.19.0",
     "@emotion/cache": "^11.6.0",
     "@emotion/react": "^11.7.0",
     "@emotion/server": "^11.4.0",
@@ -24,8 +25,10 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/lab": "^5.0.0-alpha.70",
     "@mui/material": "^5.4.3",
+    "@mui/system": "^5.4.1",
     "@mui/x-data-grid": "^5.12.1",
     "@popperjs/core": "^2.11.2",
+    "apexcharts": "^3.18.0",
     "apexcharts-clevision": "3.28.5",
     "axios": "^0.27.2",
     "clsx": "^1.1.1",
@@ -40,14 +43,12 @@
     "react-dom": "17.0.2",
     "react-perfect-scrollbar": "^1.5.8",
     "react-popper": "^2.2.5",
-    "@mui/system": "^5.4.1",
-    "apexcharts": "^3.18.0",
-    "typescript": ">=2.8.0",
-    "@babel/core":"^7.0.0"
+    "typescript": ">=2.8.0"
   },
   "devDependencies": {
-    "eslint": "^7.32.0",
-    "eslint-config-next": "12.0.4",
+    "@babel/eslint-parser": "^7.18.9",
+    "eslint": "^8.23.1",
+    "eslint-config-next": "12.3.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-import-resolver-typescript": "^2.5.0",
