--- a/frontend-public/package.json
+++ b/frontend-public/package.json
@@ -47,8 +47,8 @@
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.18.9",
-    "eslint": "^8.23.1",
-    "eslint-config-next": "12.3.0",
+    "eslint": "<8.0.0",
+    "eslint-config-next": "^12.3.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-import-resolver-typescript": "^2.5.0",
