--- a/frontend-public/package.json
+++ b/frontend-public/package.json
@@ -34,7 +34,7 @@
     "clsx": "^1.1.1",
     "countries-code": "^1.1.0",
     "mdi-material-ui": "^7.1.0",
-    "next": "12.0.4",
+    "next": "^12.3.0",
     "nprogress": "^0.2.0",
     "react": "17.0.2",
     "react-apexcharts": "^1.3.9",
