--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,9 +26,9 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16
-      - run: npm ci
+      - run: yarn i
         working-directory: ./frontend-manager
-      - run: npm run build
+      - run: yarn run build
         working-directory: ./frontend-manager
         env:
           NEXT_PUBLIC_API_URL: https://preprod-api-acropyx.herokuapp.com
