--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16
-      - run: yarn i
+      - run: yarn install
         working-directory: ./frontend-manager
       - run: yarn run build
         working-directory: ./frontend-manager
