--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
       - run: yarn run build
         working-directory: ./frontend-manager
         env:
-          NEXT_PUBLIC_API_URL: https://acropyx2-api-preprod.fly.dev/
+          NEXT_PUBLIC_API_URL: https://api-preprod.acroworldtour.com/
           NEXT_PUBLIC_APP_BASE_PATH: /acropyx2/preprod
       - uses: peaceiris/actions-gh-pages@v3
         with:
